--- a/WP assignment1.html
+++ b/WP assignment1.html
@@ -1,1 +1,66 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Second Webpage </title>
+    </head>
+    <!-- <style>
+        .p1 {font-family: "Times New Roman", Times, serif;}
+        p.thick {font-weight: bold;}
+        h3 {text-decoration: underline;}
+        p.italic {font-style: italic;}
+    </style> -->
+    <style>
+        body {
+          background-color: pink;
+          font-family: Times new roman, serif;
+          font-size: 16px;
+          color: black;  
+        }
+        
+        h3 {
+          font-family: Georgia, serif;
+          font-size: 18px;
+          text-decoration: underline;
+          color: black;
+        }
+        </style>
+    <body bgcolor="Pink">
+        <h3> Click here to view the alert message </h3>
+        <button type="button" onclick="alert('Sample Button')">Click Me!</button>
+        <br>
+        <h3> Click below to navigate to HTML file to view frames created </h3>
+        <a href ="E:\html(wp)\Assgn1.html"> Click Here </a>
+        <h3> Information Technology </h3>
+        <p class="thick"> “To the Optimist the glass is half full. To the pessimist the glass is half empty. To the engineer the glass is twice as big as it needs to be.”</p>
+        <ul>
+            <li> <span style="color:red">Department of Information Technology</span> launched in the year 2012, focus on comprehensive learning to benefit the students in making significant contributions to the Information Technology industry and to serve the society big.</li>
+            <br>
+            <li>The department strive obstinately for achieving excellence in computing disciplines from its inception and pursued through its gamut of academic programmes by offering B. Tech (IT) degree with an intake of 60 (120 from 2019) and M. Tech (Data Sciences) with an intake of 18 from 2020.</li>
+            <br>
+            <li>The faculty members are highly motivated with pioneer research and excel in teaching and learning processes. They deliver opportunities for the students to smear the assimilated knowledge for solving real-world problems and gaining graduate research experience.</li>
+            <br>
+            <li>The Department has well equipped classrooms and computer laboratories with high-end systems with LAN & Wi-Fi connectivity. The department has many industry support and Centres of Excellence status in Data Science. The student’s placement record of the department is continuously impressive.</li>
+            <br>
+            <li>The foremost objective of the department is to produce computing graduates with the calibre to design and develop computing systems that involves software and hardware integration by employing state-of-the-art approaches in programming and problem-solving skills. In addition, it strives to build data/computing infrastructure for the organization.</li>
+        </ul>
+        <h3>Ordered List</h3>
+        <ol>
+            <li>Apply the knowledge of mathematics, science, engineering fundamentals, and an engineering specialization to the solution of complex engineering problems.</li>
+            <br>
+            <li>Identify, formulate, review research literature, and analyze complex engineering problems reaching substantiated conclusions using first principles of natural sciences, and engineering sciences.</li> 
+            <br>
+            <li>Create, select, and apply appropriate techniques, resources, and modern engineering and IT tools including prediction and modeling to complex engineering activities with an understanding of the limitations</li>
+            <br>
+        </ol>
+        <h3>Click on Wi-Fi and LAN to view their respective wikipediapages</h3>
+        <a href="https://en.wikipedia.org/wiki/Wi-Fi">WIFI</a>
+        <br> <br>
+        <a href="https://en.wikipedia.org/wiki/Local_area_network">LAN</a>
+        <br>
+        <h3>Click on image to view the created HTML document</h3>
+        <a href="E:\html(wp)\Assgn1.html"><img src="E:\html(wp)\html(href_image).jpg" alt="HTML tutorial" style="width:30px;height:30px;"></a>
+        <br>
+        <h3>Click the button to navigate to top of page</h3>
+        <a href="#top">Click Here</a>
+    </body>
+</html>
